--- a/src/App.css
+++ b/src/App.css
@@ -20,3 +20,128 @@
 .App-link {
   color: #09d3ac;
 }
+
+html, body {
+  background:#343a40;
+}
+
+h1, h2, h3, button {
+  font-family: Tomorrow, sans-serif;
+}
+
+h4, h5, h6, p, li, a {
+  font-family: Overpass, sans-serif;
+}
+
+.d-block {
+  max-height:650px;
+  object-fit:cover;
+}
+
+header {
+  height:120px;
+  background-color:#343a40;
+}
+
+#logo {
+  margin-top:10px;
+}
+
+#navbar {
+  margin-top:70px;
+}
+
+.carousel-caption {
+  background:rgba(0,0,0,0.3);
+  border-radius:10px;
+  width:50%;
+  margin:auto;
+}
+
+.divider {
+  width:100%;
+  height:20px;
+  background:#007bff;
+  margin-bottom:10px;
+}
+
+.col-4 {
+  text-align:center;
+}
+
+.col-4 img {
+  max-height:200px;
+  max-width:300px;
+}
+
+.content1, .content2, .content3 {
+  margin-bottom:15px;
+}
+
+.content1 {
+  border: #6c757d 1px solid;
+  padding:5px;
+  border-radius:10px;
+}
+
+.content1 .col-8 {
+  margin-top:15px;
+}
+
+.col-8 {
+  color:#eeeeee;
+}
+
+.content2 {
+  border:#17a2b8 1px solid;
+  padding:5px;
+  border-radius:10px;
+}
+
+.content2 .col-8 {
+  margin-top:55px;
+}
+
+.content3 {
+  border:#6c757d 1px solid;
+  border-radius:10px;
+  padding:5px;
+  background-color:#6c757d;
+}
+
+.content3 .col-8 {
+  margin-top:35px;
+}
+
+.contentblock {
+  text-align:center;
+  color:#eeeeee;
+}
+
+.contentblock h1 {
+  text-align:center;
+}
+
+.accordion, .card {
+  background:#6c757d;
+  border-radius:5px;
+}
+
+.card-header button {
+  color:#;
+}
+
+.accordion {
+  margin-bottom:25px;
+}
+
+.tab-content {
+  margin-bottom:25px;
+  background:#ffffff;
+  padding:10px;
+  border:#17a2b8 1px solid;
+}
+
+.contentblock2 {
+  color:#eeeeee;
+}
